--- a/ToGo_C/src/main/webapp/resources/assets/scss/theme/_header.scss
+++ b/ToGo_C/src/main/webapp/resources/assets/scss/theme/_header.scss
@@ -245,11 +245,11 @@
 .navbar-expand-lg > .container,
 .navbar-expand-lg > .container-fluid {
 	@media (max-width: 575px) {
-		padding: 0px 15px;
+		padding: 0px 5px;
 	}
 }
 .navbar-light .navbar-toggler {
-	// @media (max-width: 991px) {
+	// @media (max-width: 99s1px) {
 	// 	margin-right: 15px;
 	// }
 }
